samples/_failures_safe/1761168117_4a6102_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_86eba231.c: In function ‘main’:
./samples/SAFE/__tmp_86eba231.c:131:13: error: expected expression at end of input
  131 |             if (op ==
      |             ^~
./samples/SAFE/__tmp_86eba231.c:131:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_86eba231.c:131:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_86eba231.c:131:13: error: expected declaration or statement at end of input
